--- a/app/views/admin/songs/new.html.slim
+++ b/app/views/admin/songs/new.html.slim
@@ -28,20 +28,10 @@
             = artists_song_form.label :artist_type, class: 'form-label'
             = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
 
-          / Featuring Artist.
-          div[data-controller="artists_songs"]
-            = form.fields_for :artists_songs, ArtistsSong.new, child_index: 'featuring_index' do |artists_song_form|
-              .mb-3.featuring-field-template style="display: none;"
-                = artists_song_form.label :artist_id, class: 'form-label'
-                = artists_song_form.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
-
-                = artists_song_form.label :artist_type, class: 'form-label'
-                = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
-
-            div[data-search-target="artists_songs.fields"]
-              / This is where new "Featuring" fields will be added dynamically.
-            button.btn.btn-link[data-action="click->artists_songs#addFeaturingField"]
-              | Add Featuring Artist
+        .mb-3
+          div[data-controller="artists-songs"]
+            = button_tag 'Greet', type: 'button', data: { action: 'artists-songs#greet' }
+            span[data-artists-songs-target="output"]
 
         .mb-3
           = form.label :genre_id, class: 'form-label'
@@ -54,11 +44,6 @@
         div
           = form.submit 'Create Song', class: 'btn btn-primary'
 
-
-        .mb-3
-          div[data-controller="hello"]
-            = button_tag 'Greet', type: 'button', data: { action: 'hello#greet' }
-            span[data-hello-target="output"]
 
       br
 
