--- a/app/views/admin/songs/edit.html.slim
+++ b/app/views/admin/songs/edit.html.slim
@@ -22,26 +22,28 @@
         = form.fields_for :artists_songs do |artists_song_form|
           / Main Artist.
           .mb-3
-            = artists_song_form.label :artist_id, class: 'form-label'
+            = artists_song_form.label 'Main Artist', class: 'form-label'
             = artists_song_form.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
 
             = artists_song_form.label :artist_type, class: 'form-label'
             = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
 
-          / Featuring Artist.
-          div[data-controller="artists_songs"]
-            = form.fields_for :artists_songs, ArtistsSong.new, child_index: 'featuring_index' do |artists_song_form|
-              .mb-3.featuring-field-template style="display: none;"
-                = artists_song_form.label :artist_id, class: 'form-label'
-                = artists_song_form.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
+          div[data-controller='artists-songs']
+            = button_tag 'Add Featuring Artist', type: 'button', data: { action: 'artists-songs#addFeaturingArtist' }, class: 'btn btn-link mb-3'
+            div[data-artists-songs-target='featuringArtistsList']
+              .featuring-field-template[style="display: none;"]
+                / Feature Artist.
+                .mb-3[data-artists-songs-target='featuringArtist']
+                  .row
+                    .col-md-10.offset-md-1
+                      = artists_song_form.label 'Featuring Artist', class: 'form-label'
+                      = artists_song_form.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
 
-                = artists_song_form.label :artist_type, class: 'form-label'
-                = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
-
-            div[data-search-target="artists_songs.fields"]
-              / This is where new "Featuring" fields will be added dynamically.
-            button.btn.btn-link[type="button",data-action="click->artists_songs#addFeaturingField"]
-              | Add Featuring Artist
+                      = artists_song_form.label :artist_type, class: 'form-label'
+                      = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
+                    .col-md-1
+                      = button_tag '', type: 'button', data: { action: 'artists-songs#removeFeaturingArtist' }, class: 'btn btn-danger' do
+                        span.bi.bi-x-square-fill
 
         .mb-3
           = form.label :genre_id, class: 'form-label'
