--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -15,6 +15,11 @@
           p
             strong Artists:
             = artists_list @song.artists
+          p
+            iframe[style="border-radius:12px" src="#{@song.link}" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"]
+          p
+            strong Tempo:
+            = @song.tempo.to_s + ' BPM'
           div
             strong Lyric:
             =< simple_format(@song.lyric)
