--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -22,7 +22,8 @@
             = @song.tempo.to_s + ' BPM'
 
             div[data-controller='metronome']
-              input[type="hidden" data-metronome-target="bpm" placeholder="BPM" value="#{@song.tempo}"]
+              input[type="hidden" data-metronome-target="bpm" value="#{@song.tempo}"]
+              input[type="hidden" data-metronome-target="sound" value="#{audio_path('drumsticks.mp3')}"]
               = button_tag '', type: 'button', data: { action: 'metronome#handleClick' }, class: 'btn btn-primary'
                 span[data-metronome-target='tempoButton'] Start metronome for the song
           div
