--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -15,6 +15,17 @@
           p
             strong Artists:
             = artists_list @song.artists
+          p
+            iframe[style="border-radius:12px" src="#{@song.link}" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"]
+          p
+            strong Tempo:
+            = @song.tempo.to_s + ' BPM'
+
+            div[data-controller='metronome']
+              input[type="hidden" data-metronome-target="bpm" value="#{@song.tempo}"]
+              input[type="hidden" data-metronome-target="sound" value="#{audio_path('drumsticks.mp3')}"]
+              = button_tag '', type: 'button', data: { action: 'metronome#handleClick' }, class: 'btn btn-primary'
+                span[data-metronome-target='tempoButton'] Start metronome for the song
           div
             strong Lyric:
             =< simple_format(@song.lyric)
