--- a/app/views/admin/songs/edit.html.slim
+++ b/app/views/admin/songs/edit.html.slim
@@ -37,18 +37,35 @@
           div[data-controller='artists-songs']
             = button_tag 'Add Featuring Artist', type: 'button', data: { action: 'artists-songs#addFeaturingArtist' }, class: 'btn btn-link mb-3'
             div[data-artists-songs-target='featuringArtistsList']
+              .featuring-field-template[style="display: none;"]
+                / Feature Artist.
+                .mb-3[data-artists-songs-target='featuringArtist']
+                  .row
+                    .col-md-10.offset-md-1
+                      = artists_song.label 'Featuring Artist', class: 'form-label'
+                      = select_tag 'song[artists_songs_attributes][][artist_id]', options_from_collection_for_select(Artist.all, 'id', 'name'), class: 'form-control', disabled: true
+
+                      = hidden_field_tag 'song[artists_songs_attributes][][artist_type]', 'featuring', disabled: true
+                      = hidden_field_tag 'song[artists_songs_attributes][][_destroy]', '0', disabled: true
+
+                    .col-md-1
+                      = button_tag '', type: 'button', data: { action: 'artists-songs#removeFeaturingArtist' }, class: 'btn btn-danger' do
+                        span.bi.bi-x-square-fill
+
               - for i in 1...@song.artists.length
-                .featuring-field-template
+                .featuring-field-template[id="song_artists_#{i}"]
                   / Feature Artist.
                   .mb-3[data-artists-songs-target='featuringArtist']
                     .row
                       .col-md-10.offset-md-1
                         = artists_song.label 'Featuring Artist', class: 'form-label'
                         = select_tag 'song[artists_songs_attributes][][artist_id]', options_from_collection_for_select(Artist.all, 'id', 'name', @song.artists[i].id), class: 'form-control'
+                        = hidden_field_tag 'song[artists_songs_attributes][][id]', @song.artists_songs[i].id
                         = hidden_field_tag 'song[artists_songs_attributes][][artist_type]', 'featuring'
+                        = hidden_field_tag 'song[artists_songs_attributes][][_destroy]', '0'
 
                       .col-md-1
-                        = button_tag '', type: 'button', data: { action: 'artists-songs#removeFeaturingArtist' }, class: 'btn btn-danger' do
+                        = button_tag '', type: 'button', data: { action: 'artists-songs#removeFeaturingArtist', 'artists-songs-template-param': "song_artists_#{i}" }, class: 'btn btn-danger' do
                           span.bi.bi-x-square-fill
 
         .mb-3
